a2/stage/tests/accept/return_float_int.ul
float test() {
  return 5;
}

void main() {

}
