a2/stage/tests/reject/3.1.4_invalid.ul
void main() {
    println foo() + 1;

}

void foo() {

}